--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,6 @@ jobs:
   - stage: Build app
     script:
     - ng serve -o;
-deploy:
-  provider: firebase
-  token:
-    secure: $FIREBASE_TOKEN
-
-    
+    after_success:
+      - npm install -g firebase-tools
+      - firebase deploy --token "$FIREBASE_TOKEN"
