--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,9 @@ cache:
 jobs:
   include:
   - stage: Install modules
-    script:
-    - npm install;
+    script: npm install;
   - stage: Build app
-    script:
-    - ng serve -o;
+    script: ng serve -o;
     after_success:
       - npm install -g firebase-tools
       - firebase deploy --token "$FIREBASE_TOKEN"
